Fix incorrect sections.

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -96,13 +96,13 @@ block content
     .col-xl-10.offset-xl-1
       h2.text-start.mx-3 Encounter Mods
       #accordion-7.accordion(role="tablist")
-        +accordion-item("#accordion-7", 1, "700 - Followers", realism)
-        +accordion-item("#accordion-7", 2, "710 - Follower Enhancements", roleplaying)
-        +accordion-item("#accordion-7", 3, "720 - Spouses and Children", basic_needs)
-        +accordion-item("#accordion-7", 4, "730 - NPC Enhancements", camping)
-        +accordion-item("#accordion-7", 5, "740 - NPC Encounters", traps)
-        +accordion-item("#accordion-7", 6, "750 - Wildlife Enhancements", diseases)
-        +accordion-item("#accordion-7", 7, "760 - Wildlife Encounters", timescale)
+        +accordion-item("#accordion-7", 1, "700 - Followers", followers)
+        +accordion-item("#accordion-7", 2, "710 - Follower Enhancements", follower_enhancements)
+        +accordion-item("#accordion-7", 3, "720 - Spouses and Children", spouses_children)
+        +accordion-item("#accordion-7", 4, "730 - NPC Enhancements", npc_enhancements)
+        +accordion-item("#accordion-7", 5, "740 - NPC Encounters", npc_encounters)
+        +accordion-item("#accordion-7", 6, "750 - Wildlife Enhancements", wildlife_enhancements)
+        +accordion-item("#accordion-7", 7, "760 - Wildlife Encounters", wildlife_encounters)
         +accordion-item("#accordion-7", 8, "770 - Creatures", creatures)
         +accordion-item("#accordion-7", 9, "780 - Dragons", dragons)
   .row.mb-4
